--- a/gas2masm/gas2masm_v12.vcxproj
+++ b/gas2masm/gas2masm_v12.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D0EE6FF4-946E-44D3-828D-8D1BF23E8A0D}</ProjectGuid>
+    <ProjectName>gas2masm</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
