* FakeMGL not for GLQuake

--- a/WinQuake/WinQuake_v9.vcproj
+++ b/WinQuake/WinQuake_v9.vcproj
@@ -1755,6 +1755,22 @@
 			<File
 				RelativePath=".\fake_mgl.c"
 				>
+				<FileConfiguration
+					Name="GL Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="GL Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="gl_draw.c"
