--- a/WinQuake/WinQuake_v12.vcxproj.filters
+++ b/WinQuake/WinQuake_v12.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClCompile Include="zone.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fake_mgl.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="progdefs.q1" />
@@ -429,6 +432,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="zone.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fake_mgl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
