Importing a part of textscreen library from Chocolate Doom by Simon Howard.
Depends on SDL, and supports keyboard and mouse input. This is not needed for Quake, and should be simplified as much as possible.

--- a/WinQuake/WinQuake_v12.vcxproj
+++ b/WinQuake/WinQuake_v12.vcxproj
@@ -1039,6 +1039,7 @@ del "$(IntDir)%(Filename).spp"
     <ClInclude Include="txt_largefont.h" />
     <ClInclude Include="txt_main.h" />
     <ClInclude Include="txt_sdl.h" />
+    <ClInclude Include="txt_smallfont.h" />
     <ClInclude Include="vid.h" />
     <ClInclude Include="view.h" />
     <ClInclude Include="wad.h" />
