--- a/WinQuake/WinQuake_v9.vcproj
+++ b/WinQuake/WinQuake_v9.vcproj
@@ -1753,6 +1753,26 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\fake_mgl.c"
+				>
+				<FileConfiguration
+					Name="GL Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="GL Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="gl_draw.c"
 				>
 				<FileConfiguration
@@ -4785,6 +4805,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\fake_mgl.h"
+				>
+			</File>
+			<File
 				RelativePath="gl_model.h"
 				>
 			</File>
@@ -4906,10 +4930,6 @@
 			</File>
 			<File
 				RelativePath=".\txt.h"
-				>
-			</File>
-			<File
-				RelativePath=".\txt_doomkeys.h"
 				>
 			</File>
 			<File
