--- a/WinQuake/WinQuake_v9.vcproj
+++ b/WinQuake/WinQuake_v9.vcproj
@@ -70,7 +70,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib strmiids.lib"
 				OutputFile="$(OutDir)\winquake.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -160,7 +160,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="dsound.lib dxguid.lib comctl32.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib comctl32.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
 				OutputFile="$(OutDir)\glquake.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -250,7 +250,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
 				OutputFile="$(OutDir)\winquake.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -339,7 +339,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="dsound.lib dxguid.lib comctl32.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib comctl32.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
 				OutputFile="$(OutDir)\glquake.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
