--- a/WinQuake/WinQuake_v12.vcxproj
+++ b/WinQuake/WinQuake_v12.vcxproj
@@ -50,25 +50,21 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="oggd_v12.props" />
-    <Import Project="sdld_v12.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="oggd_v12.props" />
-    <Import Project="sdld_v12.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="ogg_v12.props" />
-    <Import Project="sdl_v12.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="ogg_v12.props" />
-    <Import Project="sdl_v12.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
@@ -119,7 +115,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -162,7 +158,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -205,7 +201,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -248,7 +244,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -370,6 +366,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug GL|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
+    </ClCompile>
+    <ClCompile Include="fake_mgl.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug GL|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="gl_draw.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -591,7 +591,7 @@
     <ClCompile Include="sys_win.c">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
     </ClCompile>
-    <ClCompile Include="txt_sdl.c" />
+    <ClCompile Include="txt_win.c" />
     <ClCompile Include="vid_win.c">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
@@ -1004,6 +1004,7 @@ del "$(IntDir)%(Filename).spp"
     <ClInclude Include="dosisms.h" />
     <ClInclude Include="draw.h" />
     <ClInclude Include="d_iface.h" />
+    <ClInclude Include="fake_mgl.h" />
     <ClInclude Include="glquake.h" />
     <ClInclude Include="gl_model.h" />
     <ClInclude Include="gl_warp_sin.h" />
@@ -1034,11 +1035,9 @@ del "$(IntDir)%(Filename).spp"
     <ClInclude Include="sound.h" />
     <ClInclude Include="spritegn.h" />
     <ClInclude Include="sys.h" />
-    <ClInclude Include="txt_doomkeys.h" />
+    <ClInclude Include="txt.h" />
     <ClInclude Include="txt_font.h" />
     <ClInclude Include="txt_largefont.h" />
-    <ClInclude Include="txt_main.h" />
-    <ClInclude Include="txt_sdl.h" />
     <ClInclude Include="txt_smallfont.h" />
     <ClInclude Include="vid.h" />
     <ClInclude Include="view.h" />
