--- a/WinQuake/WinQuake_v9.vcproj
+++ b/WinQuake/WinQuake_v9.vcproj
@@ -1816,6 +1816,26 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\gl_fullbright.c"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="gl_mesh.c"
 				>
 				<FileConfiguration
@@ -4806,6 +4826,10 @@
 			</File>
 			<File
 				RelativePath=".\fake_mgl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\gl_fullbright.h"
 				>
 			</File>
 			<File
