--- a/WinQuake/WinQuake_v10.vcxproj
+++ b/WinQuake/WinQuake_v10.vcxproj
@@ -115,7 +115,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -158,7 +158,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -201,7 +201,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -244,7 +244,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -367,10 +367,18 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
     </ClCompile>
+    <ClCompile Include="fake_mgl.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug GL|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="gl_draw.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
+    </ClCompile>
+    <ClCompile Include="gl_fullbright.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="gl_mesh.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -587,6 +595,7 @@
     <ClCompile Include="sys_win.c">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
     </ClCompile>
+    <ClCompile Include="txt_win.c" />
     <ClCompile Include="vid_win.c">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release GL|Win32'">true</ExcludedFromBuild>
@@ -763,7 +772,6 @@ del "$(IntDir)%(Filename).spp"
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)%(Filename).obj;%(Outputs)</Outputs>
     </CustomBuild>
     <None Include="progdefs.q1" />
-    <None Include="progdefs.q2" />
     <CustomBuild Include="r_aclipa.s">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">mycoolbuild</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">cl /EP &gt; "$(IntDir)%(Filename).spp" "%(FullPath)"
@@ -999,7 +1007,9 @@ del "$(IntDir)%(Filename).spp"
     <ClInclude Include="dosisms.h" />
     <ClInclude Include="draw.h" />
     <ClInclude Include="d_iface.h" />
+    <ClInclude Include="fake_mgl.h" />
     <ClInclude Include="glquake.h" />
+    <ClInclude Include="gl_fullbright.h" />
     <ClInclude Include="gl_model.h" />
     <ClInclude Include="gl_warp_sin.h" />
     <ClInclude Include="input.h" />
@@ -1029,6 +1039,10 @@ del "$(IntDir)%(Filename).spp"
     <ClInclude Include="sound.h" />
     <ClInclude Include="spritegn.h" />
     <ClInclude Include="sys.h" />
+    <ClInclude Include="txt.h" />
+    <ClInclude Include="txt_font.h" />
+    <ClInclude Include="txt_largefont.h" />
+    <ClInclude Include="txt_smallfont.h" />
     <ClInclude Include="vid.h" />
     <ClInclude Include="view.h" />
     <ClInclude Include="wad.h" />
