--- a/WinQuake/WinQuake_v10.vcxproj.filters
+++ b/WinQuake/WinQuake_v10.vcxproj.filters
@@ -270,10 +270,18 @@
     <ClCompile Include="zone.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fake_mgl.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="txt_win.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gl_fullbright.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="progdefs.q1" />
-    <None Include="progdefs.q2" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="winquake.rc">
@@ -429,6 +437,24 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="zone.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fake_mgl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="txt_smallfont.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="txt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="txt_font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="txt_largefont.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gl_fullbright.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
