--- a/WinQuake/WinQuake_v14.vcxproj
+++ b/WinQuake/WinQuake_v14.vcxproj
@@ -119,7 +119,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;ddraw.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;dsound.lib;ddraw.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -162,7 +162,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -205,7 +205,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;ddraw.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;dsound.lib;ddraw.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -248,7 +248,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/nodefaultlib:libc.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>ddraw.lib;comctl32.lib;mgllt.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ddraw.lib;comctl32.lib;dsound.lib;dxguid.lib;winmm.lib;wsock32.lib;opengl32.lib;glu32.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
