--- a/WinQuake/WinQuake_v9.vcproj
+++ b/WinQuake/WinQuake_v9.vcproj
@@ -49,7 +49,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories=".\scitech\include"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="0"
 				BrowseInformation="1"
@@ -70,7 +70,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib strmiids.lib"
 				OutputFile="$(OutDir)\winquake.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -228,7 +228,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\scitech\include"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				RuntimeLibrary="3"
 				BrowseInformation="1"
@@ -250,7 +250,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/nodefaultlib:libc.lib"
-				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib mgllt.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
+				AdditionalDependencies="ddraw.lib dsound.lib dxguid.lib winmm.lib wsock32.lib opengl32.lib glu32.lib odbc32.lib odbccp32.lib  strmiids.lib"
 				OutputFile="$(OutDir)\winquake.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
