--- a/WinQuake/WinQuake_v14.vcxproj.filters
+++ b/WinQuake/WinQuake_v14.vcxproj.filters
@@ -513,4 +513,7 @@
       <Filter>Source Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="manifest.xml" />
+  </ItemGroup>
 </Project>
